# FastAPI-assignment

./: .gitignore  Assignment.postman_collection.json  assignment.md
assignment1/: database.py  main.py  models.py  pyproject.toml  schemas.py  security.py
assignment2/: main.py  pyproject.toml
assignment3/: .coverage  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
assignment3/tests/: conftest.py  test_blog.py
